@@ -380,10 +380,12 @@ OP_MercenaryDataResponse=0x0768
 OP_MercenaryHire=0x18ba
 OP_MercenaryDismiss=0x7ff4
 OP_MercenaryTimerRequest=0x4326
+OP_MercenaryTimer=0x6f9e
 OP_MercenaryUnknown1=0x7db4
 OP_MercenaryCommand=0x7b21
 OP_MercenarySuspendRequest=0x61b3
 OP_MercenarySuspendResponse=0x5975
+OP_MercenaryUnsuspendResponse=0x68b1
 
 # Looting
 OP_LootRequest=0x43a7
