@@ -1109,12 +1109,16 @@ public:
 	Merc* GetMerc();
 	void SetMerc(Merc* newmerc);
 	void SendMercMerchantResponsePacket(int32 response_type);
+	void SendMercenaryUnknownPacket(uint8 type);
+	void SendMercenaryUnsuspendPacket(uint8 type);
 	void SendMercTimerPacket(int32 entity_id, int32 merc_state, int32 suspended_time, int32 update_interval = 900000, int32 unk01 = 180000);
 	void SendMercSuspendResponsePacket(uint32 suspended_time);
 	void SendMercAssignPacket(uint32 entityID, uint32 unk01, uint32 unk02);
 	void SendMercPersonalInfo();
+	void SendClearMercInfo();
 	void SuspendMercCommand();
 	void SpawnMercOnZone();
+	void SpawnMerc(Merc* merc);
 	void UpdateMercTimer();
 	void UpdateMercLevel();
 	void CheckMercSuspendTimer();
